<resources>
    <string name="app_name">JelajahIn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_email">Contoh : user@gmail.com</string>
    <string name="hint_name">Contoh : Ibnu Batutah</string>
    <string name="email_atau_username">Email</string>
    <string name="password">Password</string>
    <string name="hint_password">Harus memiliki angka dan karakter</string>
    <string name="login">Masuk</string>
    <string name="halo_adventurer">Halo Adventurer!</string>
    <string name="register">Daftar Menjadi Adventurer</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="hint_fullname">Contoh : Ibnu Batutah</string>
    <string name="username">Username</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="wisata_rekomendasi">Wisata Rekomendasi</string>
    <string name="lihat_lainnya">Semua</string>
    <string name="penginapan_rekomendasi">Penginapan Rekomendasi</string>
    <string name="restaurant_rekomendasi">Restaurant Rekomendasi</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="discover">Discover</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="jelajahin_motto">Discover something new everyday</string>
    <string name="event_notice_reward">Kamu berkesempatan Hari ini</string>
    <string name="deskripsi_event">Deskripsi Event</string>
    <string name="points">%1s pts</string>
    <string name="xp">%1s xp</string>
    <string name="locked_message">Login terlebih dahulu agar dapat mengakses fitur ini</string>
    <string name="to_login">ke halaman login</string>
    <string name="join_jelajahin">Gabung ke keluarga JelajahIn!</string>
    <string name="daftar">Daftar</string>
    <string name="total_appreciation">0 Apresiasi</string>
    <string name="total_review">0 Ulasan</string>
    <string name="total_event">0 Event dihadiri</string>
    <string name="faq">FAQ</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="about_jelajahin">Tentang Jelajahin</string>
    <string name="bantuan">Bantuan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="shop">Penukaran Poin</string>
    <string name="point_history">Riwayat Poin</string>
    <string name="empty_poin_history_text">Belum ada riwayat poin, yuk ikutin event supaya kamu dapet Jelajahin Poin</string>
    <string name="lokasi">Lokasi</string>
    <string name="hadiri_event">Hadiri Event</string>
    <string name="guide_event_confirmation">Tekan tombol konfirmasi kehadiran untuk mengkonfirmasi bahwa kamu beneran hadir di event ini</string>
    <string name="konfirmasi_kehadiran">Konfirmasi Kehadiran</string>
    <string name="congrat">Wih siap! Selamat ya. Kini kamu berhak buat dapetin</string>
    <string name="findmorevent">Cari event lagi</string>
    <string name="toprofile">Kembali ke profile</string>
    <string name="semua_ulasan">Semua ulasan</string>
    <string name="tulis_ulasan">Tulis ulasan</string>
    <string name="nama_user">John Wick</string>
    <string name="hari_ulasan">1 hari yang lalu</string>
    <string name="guide_terbaik">Tempat Guide Terbaik</string>
    <string name="harga_tiket">Harga Tiket</string>
    <string name="harga_tiket_weekend">Harga Tiket Weekend</string>

    <string name="onboarding_first_title">Bersiaplah!</string>
    <string name="onboarding_second_title">Pilih lokasinya</string>
    <string name="onboarding_third_title">Seni dan Budaya</string>
    <string name="onboarding_forth_title">Point dan Hadiah</string>


    <string name="onboarding_first_desc">Pilih tujuan dan rencanakan perjalananmu jelajahi tanah langit yang hidup! .</string>
    <string name="onboarding_second_desc">Pilih tempat terbaik untuk liburanmu dan kunjungilah sudut planet yang menakjubkan! </string>
    <string name="onboarding_third_desc">Hadiri berbagai budaya dan acara menarik di setiap daerah di Indonesia.</string>
    <string name="onboarding_forth_desc">Kumpulkan poinnya dan tukarkan dengan hadiah yang menarik.</string>

    <string name="next">Next</string>
    <string name="start_journey">Mulai Petualangan!</string>
    <string name="business_schedule">Jadwal Bisnis</string>
    <string name="diet">Diet Khusus</string>
    <string name="review_for">Ulasan untuk :</string>
    <string name="pengalaman_kamu">Bagaimana Penglaman Di Tempta Wisata</string>
    <string name="ulasan_title">Judul Ulasan</string>
    <string name="ulasan_content">Tulis Ulasanmu</string>
    <string name="gambar_yang_ingin_anda_bagikan">Foto yang ingin Anda bagikan :</string>
    <string name="send_review">Kirim Ulasan</string>
    <string name="alamat">Alamat</string>
    <string name="tambah_ulasan">Tambah Ulasan</string>
    <string name="belum_ada_ulasan">Belum ada ulasan!</string>
    <string name="service_in_restaurant">Pelayanan di restaurant</string>
    <string name="food_in_restaurant">Rasa Makanan di restaurant</string>
    <string name="clean_in_restaurant">Kebersihan di restaurant</string>
    <string name="used_language">Bahasa yang digunakan</string>
    <string name="kelas_hotel">Kelas Hotel</string>

    <string name="service_in_hotel">Pelayanan di hotel</string>
    <string name="friendly_in_hotel">Keramahan di hotel</string>
    <string name="clean_in_hotel">Kebersihan di hotel</string>
    <string name="kembali_ke_jelajahin">Kembali ke Jelajahin</string>
    <string name="error_handler_message">Kami menemukan kegagalan pada aplikasi kami, semua error sudah tercatat otomatis di sistem kami, agar segera kami tindak lanjuti.</string>
    <string name="error_handler_title">There is something wrong!</string>
    <string name="lihat_error">Lihat Error</string>
    <string name="welcome_text">Hey,</string>
    <string name="current_location_text">Selamat datang di </string>
    <string name="wisata">Wisata</string>
    <string name="penginapan">Penginapan</string>
    <string name="restaurant">Restaurant</string>
    <string name="tukarkan_poin">Tukarkan Poin</string>

    <string name="lokasi_sekarang">Lokasi Saat Ini</string>
    <string name="nama_lokasi">Kab.Bondowoso</string>
    <string name="for_u">For U</string>
    <string name="jelajahin_pedia">Jelajahin Pedia</string>
    <string name="local_guide">Local Guide</string>
    <string name="rent_vehicle">Rent Vehicle</string>
    <string name="random">Lainnya</string>


    <!--    detail wisata-->
    <string name="all_photo">Lihat Semua Foto</string>
    <string name="name_wisata">Kawah Ijen</string>
    <string name="locations_kecamatan">Kecamatan Ijen, Bondowoso</string>
    <string name="macam_advanture">Gunung</string>
    <string name="titik">.</string>
    <string name="nilai_star">4.7</string>
    <string name="tentang_wisata">Tentang Lokasi Wisata</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="fasilitas_wisata">Fasilitas Wisata</string>
    <string name="tempat_parkir">Tempat Parkir</string>
    <string name="pendakian">pendakian</string>
    <string name="camping_area">Camping Area</string>
    <string name="api_unggun">Boleh Api Unggun</string>
    <string name="tas_peralatan">Sewa Peralatan</string>
    <string name="hal_menarik">Hal Yang Menarik</string>
    <string name="lokasi_peta">Lokasi Di Peta</string>

    <string name="lihat_maps">Lihat Map</string>
    <string name="nilai_detail_map">4,7</string>
    <string name="command_penilaian">Luar Biasa</string>

    <!--    event-->
    <string name="program_event">tausiah</string>
    <string name="btn_evnt">Hadiri Event</string>
    <string name="tentang_event">Tentang Event Ini</string>

    <!--    reeview-->
    <string name="locations_review">Kawah Ijen</string>
    <string name="review_gunung">Gunung</string>
    <string name="btn_Ulasan">Kirim Ulasan</string>

    <string name="service_hotel">Pelayanan Hotel</string>
    <string name="staff_friendliness">Keramahan Staff</string>
    <string name="room_cleanliness">Kebersihan Kamar</string>

    <string name="food">Makanan</string>
    <string name="service">Pelayanan</string>
    <string name="cleanliness">Kebersihan</string>


</resources>
