<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/eventFragment"
        android:icon="@drawable/ic_event"
        android:title="@string/event"/>

    <item
        android:id="@+id/discoveryFragment"
        android:icon="@drawable/ic_compass"
        android:title="@string/discover" />

    <item
        android:id="@+id/bookmarkFragment"
        android:icon="@drawable/ic_bookmark_outline"
        android:title="@string/saved"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

</menu>